# mimic-agent

./: Dockerfile  README.md  agents.py  app.py  pyproject.toml  tools.py
.streamlit/: config.toml
app/: agent_template.py  agent_template_streamlit.py  agents.py  index_query_examples.py  main.py  tools.py
app/resources/concepts/: concepts.json
app/resources/lancedb/example_queries.lance/_indices/fts/: .managed.json  meta.json
app/resources/lancedb/example_queries.lance/_transactions/: 0-857d71d2-17f5-4ed8-8e80-1ecb9c4f13ae.txn
app/resources/lancedb/example_queries.lance/_versions/: 1.manifest
app/resources/lancedb/example_queries.lance/data/: e7296ea7-3d6f-48ac-9838-67d1d6a27e11.lance
